# PythonProject25

./: .flake8  .gitignore  README.md  pyproject.toml
htmlcov/: index.html
src/: masks.py  processing.py  tests.py  widget.py
tests/: conftest.py  test_masks.py  test_processing.py  test_widget.py
