[project]
name = "pythonproject25"
version = "0.1.0"
description = ""
authors = [
    {name = "Alexander Legenkiy",email = "alexander-legenkiy@yandex.ru"}
]
requires-python = ">=3.13"
dependencies = [
    "masks (>=0.1.3,<0.2.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
lint = [
    "flake8 (>=7.3.0,<8.0.0)",
    "black (>=26.3.1,<27.0.0)",
    "mypy (>=1.20.1,<2.0.0)",
    "isort (>=8.0.1,<9.0.0)"
]

#настройки mypy
dev = [
    "pytest (>=9.0.3,<10.0.0)",
    "pytest-cov (>=7.1.0,<8.0.0)",
    "iniconfig (>=2.3.0,<3.0.0)",
    "packaging (>=26.2,<27.0)",
    "pluggy (>=1.6.0,<2.0.0)",
    "coverage (>=7.13.5,<8.0.0)"
]
[tool.mypy]
disallow_untyped_defs = true
#запрещает объявлять функции без аннотации типов
warn_return_any = true
#с этой опцией mypy предупреждает, если в качестве возвращаемого типа было указано Any
exclude = "venv"

#настройки black
[tool.black]
# Максимальная длина строки
line-length = 119
# Файлы, которые не нужно форматировать
exclude = ".git"

#настройки isort
[tool.isort]
# максимальная длина строки
line_length = 119